week03/day4/challenge1/setting/cert-renewal-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cert-checker
  namespace: securebank
spec:
  serviceAccountName: developer-sa
  containers:
  - name: checker
    image: bitnami/kubectl:latest
    command: ["/bin/sh", "-c", "sleep 3600"]
  restartPolicy: Never
