week03/day4/challenge1/setting/exposed-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: securebank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      tier: api
  template:
    metadata:
      labels:
        app: backend
        tier: api
    spec:
      serviceAccountName: developer-sa
      containers:
      - name: backend
        image: nginx:alpine
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: securebank
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
